--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,24 @@ nav {
     text-align: right;
     
 }
+
+/* MAIN */
+
+.main-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+main {
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.product-list {
+    padding: 30px 0;
+}
+
+.col {
+    width: 200px;
+    height: 360px;
+    background-color: aqua;
+}
